--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     build: ./RuleEngineAstBackend
     container_name: RuleEngineAstBackend
     ports:
-      - "7000:7000"   # Exposes port 7000 for the backend
-    env_file:          # Load the environment variables from the backend .env file
+      - "7000:7000" 
+    env_file:          
       - ./RuleEngineAstBackend/.env
    
 
@@ -12,8 +12,8 @@ services:
     build: ./RuleEngineAstFrontend
     container_name: RuleEngineAstFrontend
     ports:
-      - "80:80"        # Exposes port 80 for the frontend (served by Nginx)
-    env_file:          # Load the environment variables from the frontend .env file
+      - "80:80"       
+    env_file:          
       - ./RuleEngineAstFrontend/.env
     depends_on:
-      - backend        # Corrected service name to "backend"
+      - backend      
